# OrientationEstimation

./: README
latex/: eigen_latex  mt_latex
latex/eigen/: Background_8hh_source.tex  Helpers_8hh_source.tex  ImgProducer_8hh_source.tex  annotated.tex  classAnnotatePos.tex  classBackground.tex  classEMTrain.tex  classGradDescTrain.tex  classImgProducer.tex  classOptimiser.tex  classannotatePos.tex  classfindPersonImage.tex  classfindPersonStream.tex  classfindperson.tex  classopt__mu__alpha.tex  classopt__w__y.tex  defines_8hh_source.tex  doxygen.sty  project_header.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  structImage__t.tex  structparameter__t.tex  structpositions__t.tex  structscanline__t.tex  structtrack__t.tex
latex/mt/: annotated.tex  classannotatePosPose.tex  classannotationsHandle.tex  classcholesky.tex  classclassifyImages.tex  classfeatureDetector.tex  classfeatureExtractor.tex  classgaussianProcess.tex  classpeopleDetector.tex  classtest.tex  doxygen.sty  project_doxygen.sty  project_header.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  structannotatePosPose_1_1ANNOTATION.tex  structannotationsHandle_1_1ANNOTATION.tex  structannotationsHandle_1_1ASSIGNED.tex  structannotationsHandle_1_1FULL__ANNOTATIONS.tex  structcompareImg.tex  structfeatureDetector_1_1people.tex  structfeatureExtractor_1_1keyDescr.tex  structfeatureExtractor_1_1people.tex  structfeatureExtractor_1_1templ.tex  structgaussianProcess_1_1prediction.tex  structonScanline.tex
latex/mt/images/: annotating.eps  length_error.eps  variance_error.eps
src/: AnnotationsHandle.cpp  AnnotationsHandle.h  Auxiliary.cpp  Auxiliary.h  CMakeLists.txt  Cholesky.cpp  Cholesky.h  ClassifyImages.cpp  ClassifyImages.h  FeatureExtractor.cpp  FeatureExtractor.h  GaussianProcess.cpp  GaussianProcess.h  PeopleDetector.cpp  PeopleDetector.h  annotatePosPose.cpp  annotatePosPose.h  annotationsHandle.cpp  annotationsHandle.h  cholesky.cpp  cholesky.h  classifyImages.cpp  classifyImages.h  featureDetector.cpp  featureDetector.h  featureExtractor.cpp  featureExtractor.h  gaussianProcess.cpp  gaussianProcess.h  peopleDetector.cpp  peopleDetector.h
